fixed uncertainty comparison

--- a/cub_bird_class.ipynb
+++ b/cub_bird_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,31 +222,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num_epoch:  1\n",
-      "largest uncertainties [1.277158109471202, 1.277158109471202, 1.277158109471202, 1.277158109471202, 1.277158109471202]\n",
-      "loss: 2.3030035495758057\n",
-      "Num_epoch:  2\n",
-      "largest uncertainties [1.2198963798582554, 1.2198963798582554, 1.2198963798582554, 1.2198963798582554, 1.2198963798582554]\n",
-      "loss: 2.2967615127563477\n",
-      "Num_epoch:  3\n",
-      "largest uncertainties [1.2047797422856092, 1.2047797422856092, 1.2047797422856092, 1.2047797422856092, 1.2047797422856092]\n",
-      "loss: 2.2947237491607666\n",
-      "Num_epoch:  4\n",
-      "largest uncertainties [1.19374181330204, 1.19374181330204, 1.19374181330204, 1.19374181330204, 1.19374181330204]\n",
-      "loss: 2.275291681289673\n",
-      "Num_epoch:  5\n",
-      "largest uncertainties [1.1439541596919298, 1.1439541596919298, 1.1439541596919298, 1.1439541596919298, 1.1439541596919298]\n",
-      "loss: 2.2591352462768555\n",
-      "Num_epoch:  6\n",
-      "largest uncertainties [1.1610781028866768, 1.1610781028866768, 1.1610781028866768, 1.1610781028866768, 1.1610781028866768]\n",
-      "loss: 2.247483253479004\n",
-      "Num_epoch:  7\n"
+      "Num_epoch:  0\n",
+      "largest uncertainties [0.13105806335806847, 0.13105806335806847, 0.13105806335806847, 0.13105806335806847, 0.13105806335806847]\n",
+      "loss: 2.327220916748047\n"
      ]
     }
    ],
    "source": [
     "# same uncertainty measure as seen in that medium post\n",
     "# uncertainty = most confident - least confident\n",
+    "# we want to put the smallest uncertainties in our training\n",
+    "# because that means that that sample is not well defined\n",
     "\n",
     "def get_active_batches(trainloader, net, num_batches=1, print_f=False): \n",
     "    flag = True\n",
@@ -275,7 +261,7 @@
     "            count_key += 1\n",
     "        else:\n",
     "            for key in act_dict:\n",
-    "                if act_dict[key][0] < max_batch - min_batch:\n",
+    "                if act_dict[key][0] > max_batch - min_batch:\n",
     "                    act_dict[key] = [max_batch - min_batch, inputs, labels]\n",
     "    \n",
     "    if print_f:\n",
@@ -309,7 +295,7 @@
     "losses = []\n",
     "while loss > 0.2 and num_epoch < 150:\n",
     "    print_f = False\n",
-    "    if num_epoch % 10:\n",
+    "    if num_epoch % 10 == 0:\n",
     "        print('Num_epoch: ', num_epoch)\n",
     "        print_f = True\n",
     "    data_act, labels_act = get_active_batches(trainloader, net, 5, print_f)\n",
